Update CI.yml to deploy the build to GitHub Pages

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,13 +1,14 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: .NET
+name: CI/CD
 
 on:
   push:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  workflow_dispatch:  
 
 jobs:
   build:
@@ -19,6 +20,8 @@ jobs:
     
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.3.1
+      with:
+        msbuild-architecture: x64
       
     - name: Setup NuGet.exe for use with actions
       uses: NuGet/setup-nuget@v1.2.0
@@ -29,3 +32,23 @@ jobs:
     - name: Build the Solution 
       run: msbuild FreeSpace.sln /p:Configuration=Release
 
+  deploy:
+    # Add a dependency to the build job
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v2 # or the latest "vX.X.X" version tag for this action
