Update CI.yml add action Upload Pages Aritifact to build job

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,6 +31,9 @@ jobs:
      
     - name: Build the Solution 
       run: msbuild FreeSpace.sln /p:Configuration=Release
+    
+    - name: Upload pages artifact
+      uses: actions/upload-pages-artifact@v1.0.8
 
   deploy:
     # Add a dependency to the build job
