--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: CI/CD
+name: CI
 
 on:
   push:
@@ -32,26 +32,8 @@ jobs:
     - name: Build the Solution 
       run: msbuild FreeSpace.sln /p:Configuration=Release
     
-    - name: Upload pages artifact
-      uses: actions/upload-pages-artifact@v1.0.8
+    - name: Upload a build artifact
+      uses: actions/upload-artifact@v3.1.2
+      with:
+        path: FreeSpace\bin\Release\FreeSpace.exe
 
-  deploy:
-    # Add a dependency to the build job
-    needs: build
-
-    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-
-    # Deploy to the github-pages environment
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
-    # Specify runner + deployment step
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2 # or the latest "vX.X.X" version tag for this action
