--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,5 +35,7 @@ jobs:
     - name: Upload a build artifact
       uses: actions/upload-artifact@v3.1.2
       with:
+        name: FreeSpace.zip
         path: FreeSpace\bin\Release\FreeSpace.exe
+        
 
