- updating the version number - updating the readme - adding some logs to test attributes

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Upload a build artifact
       uses: actions/upload-artifact@v3.1.2
       with:
-        name: FreeSpace.zip
+        name: FreeSpace.exe
         path: FreeSpace\bin\Release\FreeSpace.exe
         
 
